[Modify] Git Action 수정

--- a/.github/workflow/commit-stage.yml
+++ b/.github/workflow/commit-stage.yml
@@ -12,8 +12,7 @@ on:
         options:
           - 'true'
           - 'false'
-  pull_request:
-    types: [closed]
+  push:
     branches:
       - main
 
