[Add] api-gateway 추가

--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -1,1 +1,13 @@
-spring.application.name=catalog-service
+server:
+  port: 9001
+  tomcat:
+    # ??????? TCP ??? ???? ??? HTTP ??? ???? ??? ??? ???? ??
+    connection-timeout: 2s
+    # ??? HTTP ??? ???? ?? ??? ???? ??
+    keep-alive-timeout: 15s
+    threads:
+      max: 50
+      min-spare: 5
+
+polar:
+  greeting: Welcome to the local project
