--- a/eureka-service/src/main/resources/application.yml
+++ b/eureka-service/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 # Spring Cloud?? ??? MSA ID? ?? ????? ? ??? ????.
 spring:
   application:
-    name: discovery
+    name: eureka-service
 
 eureka:
   client:
