[Study] config-server 생성과 사용

--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -1,9 +1,7 @@
 server:
   port: 9001
   tomcat:
-    # ??????? TCP ??? ???? ??? HTTP ??? ???? ??? ??? ???? ??
     connection-timeout: 2s
-    # ??? HTTP ??? ???? ?? ??? ???? ??
     keep-alive-timeout: 15s
     threads:
       max: 50
@@ -16,3 +14,9 @@ polar:
 spring:
   application:
     name: catalog-service
+  config:
+    # 가능하면 컨피그 서버에서 설정 데이터를 가져온다.
+    import: "optional:configserver:"
+  cloud:
+    config:
+      uri: http://localhost:8888
