--- a/config-service/build.gradle
+++ b/config-service/build.gradle
@@ -13,16 +13,9 @@ java {
     }
 }
 
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
-}
-
 repositories {
     mavenCentral()
 }
-
 ext {
     set('springCloudVersion', "2024.0.1")
 }
@@ -33,17 +26,16 @@ dependencyManagement {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    testImplementation 'io.projectreactor:reactor-test'
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
+    implementation 'org.springframework.cloud:spring-cloud-config-server'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    implementation 'org.springframework.boot:spring-boot-configuration-processor'
+    // Spring Cloud Bus (RabbitMQ 기반)
+    implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
     // Spring Cloud Config Client
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
+    // (선택적으로) bootstrap.yml을 사용할 수 있게 해주는 starter
+    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
 }
 
 tasks.named('test') {
