--- a/catalog-service/build.gradle
+++ b/catalog-service/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-configuration-processor'
     // Spring Cloud Config Client
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
+    // Spring retry
+    implementation 'org.springframework.retry:spring-retry'
 }
 
 tasks.named('test') {
