--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -20,3 +20,15 @@ spring:
   cloud:
     config:
       uri: http://localhost:8888
+      # 설정 서버에 연결될 때 까지 기다리는 시간(밀리초)
+      request-connect-timeout: 5000
+      # 설정 서버에서 설정 데이터를 읽을 때까지 기다리는 시간(밀리초)
+      request-read-timeout: 5000
+      # 설정 서버 연결 실패를 치명적 오류로 인식
+      fail-fast: true
+      retry:
+        max-attempts: 6           # 최대 시도 횟수
+        initial-interval: 1000    # 최초 재시도 지연 시간
+        max-interval: 2000        # 재시도 지연 최대 시간
+        multiplier: 1.1           # 지연 시간 계산 승수
+
