--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.5.0'
+    id 'org.springframework.boot' version '3.4.3'
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
@@ -21,6 +21,17 @@ configurations {
 
 repositories {
     mavenCentral()
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2024.0.1" // 또는 사용 중인 Spring Boot에 맞는 최신 버전
+    }
+}
+
+repositories {
+    mavenCentral()
+    maven { url "https://repo.spring.io/release" }
 }
 
 dependencies {
