--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
     import: "optional:configserver:"
   cloud:
     config:
-      uri: http://localhost:8888
+      uri: http://config-service:8888
       # 설정 서버에 연결될 때 까지 기다리는 시간(밀리초)
       request-connect-timeout: 5000
       # 설정 서버에서 설정 데이터를 읽을 때까지 기다리는 시간(밀리초)
@@ -32,3 +32,8 @@ spring:
         max-interval: 2000        # 재시도 지연 최대 시간
         multiplier: 1.1           # 지연 시간 계산 승수
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
