--- a/config-service/Dockerfile
+++ b/config-service/Dockerfile
@@ -1,6 +1,7 @@
-FROM openjdk:17-ea-11jdk-slim
+FROM openjdk:17-slim
 VOLUME /tmp
 COPY ./apiEncryptionKey.jks apiEncryptionKey.jks
 ARG JAR_FILE=build/libs/*.jar
 COPY ${JAR_FILE} app.jar
+EXPOSE 8888
 ENTRYPOINT ["java", "-jar", "/app.jar"]
