--- a/config-service/src/main/resources/application.yml
+++ b/config-service/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     name: config-service
   cloud:
     config:
-      uri: http://localhost:8888
+      uri: http://config-service:8888
       server:
         git:
           uri: https://github.com/YuYoHan/config-repo.git
