--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
 rootProject.name = 'cloud-native'
 
-include 'gateway-service', 'eureka-service', 'catalog-service', 'config-service'
+include 'api-gateway', 'eureka-service', 'catalog-service', 'config-service'
 
