--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -12,6 +12,16 @@ polar:
 
 
 spring:
+  sql:
+    init:
+      mode: always
+  datasource:
+    username: zxzz45
+    password: 1234
+    url: jdbc:postgresql://localhost:5432/polardb_catalog
+    hikari:
+      connection-timeout: 2000    # 풀에서 연결 객체를 얻기 위해 기다려야 하는 최대 시간
+      maximum-pool-size: 5        # 히카리CP가 풀에 최대한으로 유지할 수 있는 연결 객체의 수
   application:
     name: catalog-service
   config:
