--- a/catalog-service/build.gradle
+++ b/catalog-service/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     // Spring retry
     implementation 'org.springframework.retry:spring-retry'
+    // flyway
+    implementation 'org.flywaydb:flyway-core'
 }
 
 tasks.named('test') {
