[Chore] webFlux & r2dbc 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,17 @@ services:
     networks:
       - msa-network
 
+  polar-postgres:
+    image: "postgres:14.4"
+    container_name: "polar-postgres"
+    ports:
+      - 5432:5432
+    environment:
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=password
+    volumes:
+      - ./postgresql/init.sql:/docker-entrypoint-initdb.d/init.sql
+
   # User Service
 #  user-service:
 #    build:
