--- a/order-service/src/main/resources/application.yaml
+++ b/order-service/src/main/resources/application.yaml
@@ -18,3 +18,10 @@ spring:
       max-create-connection-time: 2s  # 풀에서 연결 객체 하나를 얻을 때까지 기다릴 수 있는 최대한의 시간
       initial-size: 5                 # 연결 풀의 초기 크기
       max-size: 10                    # 풀이 최대한으로 가질 수 있는 연결의 수
+  flyway:
+    user: ${spring.r2dbc.username}
+    password: ${spring.r2dbc.password}
+    url: jdbc:postgresql://localhost:5432/polardb_order
+
+polar:
+  catalog-service-uri: "http://localhost:9001"
